[gd_scene load_steps=2 format=3 uid="uid://drih4cr3wy0qw"]

[ext_resource type="Script" uid="uid://bqcsi0pqx6fbq" path="res://scenes/gamer.gd" id="1_3gp36"]

[node name="Gamer" type="Node2D"]
script = ExtResource("1_3gp36")

[node name="Tile0124" type="Sprite2D" parent="."]
position = Vector2(0, -1.13687e-13)
scale = Vector2(3.09375, 3.1875)

[node name="Area2D" type="Area2D" parent="Tile0124"]
position = Vector2(-10.3434, -2.5098)
scale = Vector2(0.323232, 0.313725)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tile0124/Area2D"]
position = Vector2(-0.000106812, 1.99999)
polygon = PackedVector2Array(32, 0, 0, 8, 0, 27, 32, 35, 64, 27, 64, 8)

[connection signal="input_event" from="Tile0124/Area2D" to="." method="on_input_event"]
[connection signal="mouse_entered" from="Tile0124/Area2D" to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="Tile0124/Area2D" to="." method="on_mouse_exited"]
